# sdk-zephyr

boards/shields/semtech_sx1262mb2das/: semtech_sx1262mb2das.overlay
include/zephyr/drivers/: lora.h
kernel/: mem_slab.c
modules/hal_nordic/nrf_802154/serialization/platform/: nrf_802154_spinel_backend_ipc.c  nrf_802154_spinel_response_notifier.c
samples/bluetooth/peripheral/: prj.conf
samples/bluetooth/peripheral/src/: cts.c  cts.h  main.c
samples/drivers/lora/receive/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
samples/drivers/lora/receive/src/: main.c
samples/drivers/lora/send/src/: main.c
samples/hello_world/: CMakeLists.txt  Kconfig
samples/subsys/mgmt/mcumgr/smp_svr/: pm_static.yml  prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/src/: main.c
subsys/net/l2/openthread/: openthread.c
